@@ -1,4 +1,4 @@
-= Rubytree 0.4.0
+= Rubytree 0.3.1
 
   (c) 2006, 2007 Anupam Sengupta
   http://rubytree.rubyforge.org
